# bloomfilter3

./: .gitignore  AUTHORS.md  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: main.yml
bloomfilter3/: __init__.py  bloom_filter.py  cfg.py
bloomfilter3/backends/: __init__.py  mmap.py
bloomfilter3/hash/: __init__.py  hashing.py
tests/: test_bloom_filter.py  test_mmap_backend.py
