[metadata]
name = "bloomfilter3"
version = "1.0.0"
author = "Alain Richardt"
author_email = "alain@atomictessellator.com"
url = "https://github.com/AtomicTessellator/bloomfilter3"
description = "Python bloom-filter library with a focus on ease of use and high performance"
long_description = "file: README.md"
long_description_content_type = "text/markdown"
keywords = "bloom filter"
license = "MIT"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3"
]

[build-system]
requires = ["setuptools >= 40.6.0", "wheel"]
build-backend = "setuptools.build_meta"
