[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bloomfilter3"
description = 'A Bloom filter implementation in Python 3'
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = []
authors = [
  { name = "Alain Richardt", email = "alain@atomictessellator.com" },
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/AtomicTessellator/bloomfilter3/blob/main/README.md"
Issues = "https://github.com/AtomicTessellator/bloomfilter3/issues"
Source = "https://github.com/AtomicTessellator/bloomfilter3"

[tool.hatch.version]
path = "bloomfilter3/__init__.py"

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "pytest-cov",
]

[[tool.hatch.envs.test.matrix]]
python = ["37", "38", "39", "310", "311"]
